# Face_detection

data_gathering_utils/: a.csv  parse_columbia.py
face_detection/: CMakeLists.txt  eigen_ faces_centroid.csv  eigen_faces.csv  eigenspace.csv  face_detection.cpp  face_detection.sln  face_detection.vcxproj  face_detection.vcxproj.filters  face_rec_training.cpp  face_rec_training.h  generate_faces.cpp  main.tex  mean.csv  pca.cpp
face_detection/x64/Debug/: face_detection.ilk  vc141.idb
face_detection/x64/Debug/face_detection.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  face_detection.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
