cmake_minimum_required(VERSION 2.8)
set (CMAKE_CXX_STANDARD 11)
project( FaceDetection )
find_package( OpenCV REQUIRED )
add_executable( FaceDetection face_detection.cpp face_rec_training.cpp face_rec_training.h )
# add_executable( FaceRecTraining face_rec_training.cpp )
target_link_libraries( FaceDetection ${OpenCV_LIBS} )
# target_link_libraries( FaceRecTraining ${OpenCV_LIBS} )
